style.css
@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');

html {
    font-family: "Inter", sans-serif;
    color:white;
    height: 100%;
    width: 100%;
    overscroll-behavior: none;
}

/* GRADIENT BY MANUEL PINTO https://codepen.io/P1N2O/pen/pyBNzX - Modified by me*/

body {
    background: linear-gradient(45deg, #04070a, #0a0f14, #101820, #060b0f);
    background-size: 400% 400%;
    animation: gradient 15s ease infinite;
    
    display: flex;
    flex-direction: column;
    margin: 0;
    height: 100vh;
}

@keyframes gradient {
    0% {
        background-position: 0% 50%;
    }

    50% {
        background-position: 100% 50%;
    }

    100% {
        background-position: 0% 50%;
    }
}

/* GRADIENT BY MANUEL PINTO https://codepen.io/P1N2O/pen/pyBNzX - Modified by me*/

main {
    flex: 1;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

main h1 {
    margin-top: 0;
    font-size: 100px;
    font-weight: bold;
    background: linear-gradient(to right, #00ffff, #ff9100);
    background-clip: text;
    color: transparent;
}

footer {
    text-align: center;
    padding: 10px;
    background-color: rgba(0, 0, 0, 0.2);
}

.statuses {
    justify-content: center;
}

table {
    margin-left: auto;
    margin-right: auto;
    word-wrap: break-word;
    table-layout: fixed;
}

table th, table td {
    padding: 8px;
    text-align: center;
}

h2 {
    font-size: 40px;
    font-weight: bold;
    background: linear-gradient(to right, #00ffff, #ff9100);
    background-clip: text;
    color: transparent;
}

.other-stuff {
    width: 90%;
    max-width: 920px;
    text-align: left;
    margin: 1.5rem auto .1rem auto;
    background: linear-gradient(to left, #00ffff, #ff9100);
    background-clip: text;
    color: transparent;
    background-position: 50% 0%;
}

.projects,
.status-table {
    background-color: rgba(255, 255, 255, 0.1);
    border-radius: 10px;
    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
    transition: transform 0.3s ease-in-out; 
}

.projects:hover,
.status-table:hover {
    transform: scale(1.02); 
}

.status-table {
width: auto !important;
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 16px; 
  padding-top: 4px;
  padding-left: 4px;
  padding-right: 4px;
  flex-wrap: wrap;
}

.status-table tr{
  display: flex;
  flex-wrap: wrap; 
  gap: 12px;
  align-items: center;
  justify-content: center;
}

.social-links {
    width: 90%;
    list-style: none;
    max-width: 950px;
    text-align: left; 
    font-size: 20px;
}

.social-links li + li {
    border-top: 1px solid rgba(255, 255, 255, 0.15);
    padding-top: 8px;
}

.social-links li {
    margin: 8px 0;
}

.social-links a {
    color: white;
    text-decoration: none;
    font-weight: 500;
    transition: 0.3s;
}

.social-links a:hover {
    opacity: 0.8;
}

td a {
    color: white;
    text-decoration: none;
    font-weight: 500;
    transition: 0.3s;
    font-size: 20px;
}

td a:hover {
    opacity: 0.8;
}

#discord-link.copied::after {
  content: " (copied!)";
  color: #ffffff;
  font-size: 0.9em;
}

.github-pages {
    color:white;
    font-size: 17px;
    font-weight: bold;
    text-decoration: none;
}

.font-awesome {
    color:white;
    font-size: 17px;
    font-weight: bold;
    text-decoration: none;
}

.stat-badges {
    color:white;
    font-size: 17px;
    font-weight: bold;
    text-decoration: none;
}

.web-source {
    color:white;
    font-size: 17px;
    font-weight: bold;
    text-decoration: none;
}

